Terraform for AWS cloud 2/AWS RDS/main.tf
resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"
  enable_dns_hostnames = "true"
  enable_dns_support = "true"
  

  tags = {
    Name = "main-vpc"
  }
}
